--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+html,
+body,
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
+canvas {
+  position: absolute;
+}
