--- a/style.css
+++ b/style.css
@@ -33,4 +33,25 @@ p {
     align-items: center;
     -webkit-justify-content: center;
     justify-content: center;
+    text-align: center;
+}
+
+.btn {
+    font-family: 'PT Serif', 'PT Sans', serif, sans-serif;
+    color: #ffffff;
+    font-size: 125%;
+    padding: 1%;
+    background: #000000;
+    text-decoration: none;
+    border: none;
+}
+
+.btn:hover {
+    background: #242424;
+    background-image: -webkit-linear-gradient(top, #242424, #000000);
+    background-image: -moz-linear-gradient(top, #242424, #000000);
+    background-image: -ms-linear-gradient(top, #242424, #000000);
+    background-image: -o-linear-gradient(top, #242424, #000000);
+    background-image: linear-gradient(to bottom, #242424, #000000);
+    text-decoration: none;
 }
