--- a/style.css
+++ b/style.css
@@ -38,20 +38,16 @@ p {
 
 .btn {
     font-family: 'PT Serif', 'PT Sans', serif, sans-serif;
-    color: #ffffff;
+    color: #000000;
     font-size: 125%;
     padding: 1%;
-    background: #000000;
+    background: #ffffff;
     text-decoration: none;
     border: none;
 }
 
 .btn:hover {
-    background: #242424;
-    background-image: -webkit-linear-gradient(top, #242424, #000000);
-    background-image: -moz-linear-gradient(top, #242424, #000000);
-    background-image: -ms-linear-gradient(top, #242424, #000000);
-    background-image: -o-linear-gradient(top, #242424, #000000);
-    background-image: linear-gradient(to bottom, #242424, #000000);
+    background: #000000;
+    color: #ffffff;
     text-decoration: none;
 }
