--- a/style.css
+++ b/style.css
@@ -1,22 +1,162 @@
+main > * {
+    display: none;
+}
+
+main > *:last-child {
+    display: block;
+}
+
+/*@keyframes pulse {
+    0% { transform: scale(1) }
+    50% { transform: scale(1.05) }
+    100% { transform: scale(1) }
+}*/
+
+main > *:target {
+    display: block;
+   /* animation: pulse 0.5s linear 1;*/
+}
+
+main > *:target ~ * {
+    display: none;
+}
+
+#typerLogo{
+	color: white;
+	font-family: OCR A Std, monospace;
+	width: 70%;
+	font-size: 58px;
+	position: absolute;
+	left: 40%;
+	
+	
+}
 * {
 	margin: 0;
 	padding: 0;
 }
-html, body canvas{
+html{
+	background-color: #f5f5f5;
+}
+html, body, canvas {
 	width: 100%;
 	height: 100%;
 }
 canvas {
 	position: absolute;
+	left: 10%;
 	border: 1px solid black;
-	left: 1%;
-	top: 15%;
-	float: right;
-	/*animation: keyError 0.5s;*/
+	background-color: white;
+	box-shadow: 0.5px 0.5px 0.5px 2px #888888;
+	border-radius: 5px;
+	/*top: 300px;
+	left: 20%;*/
+	
 }
-#kaka{
-	position: center;
+#scores{
+	position: absolute;
+	top: 200px;
+	left: 12%;
+	
 }
+#scores *{
+	font-size: 35px;
+}
+#kast{
+	position: absolute;
+	top: 160px;
+}
+
+#nav{
+	background-color: #222;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	
+}
+#nav_wrapper{
+	width: 100%;
+	margin: 0 auto;
+	text-align: left;
+}
+#nav ul{
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	position: relative;	
+}
+#nav ul li{
+	display: inline-block;
+}
+#nav ul li:hover{
+	background-color: #333;
+	
+	
+}
+
+#nav ul li a, visited{
+	color: #ccc;
+	display: block;
+	padding: 15px;
+	text-decoration: none;
+}
+#nav ul li a:hover{
+	color: #ccc;
+	text-decoration: none;
+}
+li {
+	width: 100px;
+	height: 60px;
+	font-size: 25px;
+}
+
+#signUp{
+	margin: 30px;
+	border: 1px solid black;
+	border-radius: 5px;
+	width: 370px;
+	height: 180px;
+	padding: 16px;
+	position: absolute;
+	top: 350px;
+	text-align: center;
+	left: 30%;
+	background-color: white;
+	box-shadow: 0.5px 0.5px 0.5px 1px #888888;
+
+}
+
+
+.signUp{
+	margin: 5px;
+	font-size: 20px;	
+}
+#btn{
+	margin: 70px;
+}
+#typerSign {
+	position: absolute;
+	font-family: OCR A Std, monospace;
+	font-size: 110px;
+	top: 140px;	
+	left: 15%;
+	
+}
+
+#intro{
+	width: 80%;
+	height: 400px;
+	position: absolute;
+	top: 150px;
+	left: 10%;
+	border: 1px solid black;
+	border-radius: 5px;
+	background-color: #f5f5f5;
+	box-shadow: 2px 2px 2px 2px #888888;
+	background-color: white;
+}
+
+
 
 @keyframes keyError {
 	0%{border: 1px solid black;}
@@ -31,17 +171,74 @@ canvas {
 	100%{border: 1px solid black;}
 }
 
-#scoretable{
-	border: 1px solid black;
-	width: 300px;
-	height: 395px;
+h2{
+	margin: 25px;
+}
+#introTxt{
+	margin: 15px;
+	font-size: 20px;
+}
+
+
+
+
+#myBtn1, #myBtn2{
+	width: 155px;
+}
+#buttons{
 	position: absolute;
-	top: 15%;
-	left: 70%;
+	bottom: 20px;
+	text-align: center;
+	width: 100%;
 }
 
-#scorebox {
-	margin: 10px;
 
+
+
+
+.myButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b8e356), color-stop(1, #a5cc52));
+	background:-moz-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+	background:-webkit-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+	background:-o-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+	background:-ms-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b8e356', endColorstr='#a5cc52',GradientType=0);
+	background-color:#b8e356;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #83c41a;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #86ae47;
 }
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #a5cc52), color-stop(1, #b8e356));
+	background:-moz-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
+	background:-webkit-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
+	background:-o-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
+	background:-ms-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
+	background:linear-gradient(to bottom, #a5cc52 5%, #b8e356 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a5cc52', endColorstr='#b8e356',GradientType=0);
+	background-color:#a5cc52;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+
+
+
+
 
