--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ canvas {
 }
 #scores{
 	position: absolute;
-	top: 200px;
+	top: 160px;
 	left: 12%;
 	
 }
@@ -64,7 +64,7 @@ canvas {
 }
 #kast{
 	position: absolute;
-	top: 160px;
+	top: 120px;
 }
 
 #nav{
@@ -139,8 +139,7 @@ li {
 	font-family: OCR A Std, monospace;
 	font-size: 110px;
 	top: 140px;	
-	left: 15%;
-	
+	left: 25%;
 }
 
 #intro{
@@ -159,11 +158,11 @@ li {
 
 
 @keyframes keyError {
-	0%{border: 1px solid black;}
-	6%{border: 10px solid red;}
-	40%{border: 10px solid red;}
-	80%{border: 2px solid red;}
-	100%{border: 1px solid red;}
+	0%{border: 1px solid black; margin-left: -1px; margin-top: -1px; margin-bottom: -1px; margin-left: -1px; margin-right: -1px;}
+	6%{border: 10px solid red; margin-left: -10px; margin-top: -10px; margin-bottom: -10px; margin-left: -10px; margin-right: -10px;}
+	40%{border: 10px solid red; margin-left: -10px; margin-top: -10px; margin-bottom: -10px; margin-left: -10px; margin-right: -10px;}
+	80%{border: 2px solid red; margin-left: -2px; margin-top: -2px; margin-bottom: -2px; margin-left: -2px; margin-right: -2px;}
+	100%{border: 1px solid red; margin-left: -1px; margin-top: -1px; margin-bottom: -1px; margin-left: -1px; margin-right: -1px;}
 }
 @keyframes normaalne {
 	0%{border: 1px solid black;}
@@ -182,7 +181,7 @@ h2{
 
 
 
-#myBtn1, #myBtn2{
+#myBtn1, #myBtn2, #myBtn3{
 	width: 155px;
 }
 #buttons{
@@ -192,7 +191,30 @@ h2{
 	width: 100%;
 }
 
+#myBtn3{
+	position: absolute;
+	top: 160px;
+	width: 60%;
+	left: 20%;
+}
+#table{
+	position: absolute; 
+	top: 200px;
+	width: 60%;
+	left: 20%;
+	border-collapse: collapse;
+	background-color: white;
+	box-shadow: 1px 1px 1px 1px #888888;	
+}
 
+#table *{
+	border: 1px solid black;
+	border-collapse: collapse;
+	padding: 7px;
+}
+#table < tr {
+	background-color: black;
+}
 
 
 
@@ -236,6 +258,54 @@ h2{
 	position:relative;
 	top:1px;
 }
+
+.myButton2 {
+	-moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	box-shadow:inset 0px 1px 0px 0px #f5978e;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f));
+	background:-moz-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-webkit-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-o-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-ms-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f',GradientType=0);
+	background-color:#f24537;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #d02718;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+	position: absolute;
+	top: 400px;
+}
+.myButton2:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
+	background:-moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-webkit-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-o-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-ms-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24537',GradientType=0);
+	background-color:#c62d1f;
+	position: absolute;
+	top: 400px;
+}
+.myButton2:active {
+	position:relative;
+	top:1px;
+	position: absolute;
+	top: 400px;
+}
+
 
 
 
