--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body, canvas {
 
 canvas {
     position: absolute;
+    z-index: -1;
 }
 
 h1 {
@@ -40,7 +41,6 @@ a.button {
     font-family: 'PT Serif', 'PT Sans', serif, sans-serif;
     color: #000000;
     font-size: 125%;
-    padding: 1%;
     background: #ffffff;
     text-decoration: none;
     border: none;
@@ -70,9 +70,15 @@ main > *:last-child {
 }
 
 @keyframes pulse {
-    0% { transform: scale(1) }
-    50% { transform: scale(1.05) }
-    100% { transform: scale(1) }
+    0% {
+        transform: scale(1)
+    }
+    50% {
+        transform: scale(1.05)
+    }
+    100% {
+        transform: scale(1)
+    }
 }
 
 main > *:target {
@@ -86,4 +92,9 @@ main > *:target ~ * {
     display: none;
     width: 100%;
     height: 100%;
+}
+
+br {
+    display: block;
+    content: " ";
 }
