--- a/style.css
+++ b/style.css
@@ -1,17 +1,29 @@
 * {
   margin: 0;
   padding: 0;
+
 }
 html, body, canvas {
   width: 100%;
   height: 100%;
+
 }
 canvas {
   position: absolute;
+
+}
+
+.game {
+font-size: 34px;
+text-align: center;
+top: 20;
+}
+
+.score {
+  font-size: 34px;
 }
 
 .welcome {
-  color: white;
     height: 100%;
     display: -webkit-flex;
     display: flex;
@@ -20,7 +32,6 @@ canvas {
     -webkit-justify-content: center;
     justify-content: center;
     text-align: center;
-    background-color: black;
     font-family: Monospace;
 }
 
