--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ a.button {
     font-family: 'PT Serif', 'PT Sans', serif, sans-serif;
     color: #000000;
     font-size: 125%;
-    background: #ffffff;
+    background: none;
     text-decoration: none;
     border: none;
 }
