--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ html, body, canvas {
 }
 canvas {
   position: absolute;
-  
+  z-index: 1;
+
 
 }
 
@@ -47,6 +48,7 @@ p {
 }
 
 .btn {
+  position: absolute;
   color: white;
   background-color: #686463;
   border: none;
@@ -54,6 +56,7 @@ p {
   cursor: pointer;
   font-size: 16px;
   margin-top: 20px;
+  z-index: 2;
 
 }
 
