--- a/page.css
+++ b/page.css
@@ -2,6 +2,11 @@ html {
 	overflow: hidden;
 	}
 	
+	#bottom{
+		position:absolute;
+		bottom: 0%;
+	}
+	
 	#left { 
 		position: absolute; 
 		left: 0; 
