--- a/style.css
+++ b/style.css
@@ -1,11 +1,65 @@
+		* {
+			margin: 0;
+			padding: 0;
+		}
+		html, body, canvas {
+			width: 100%;
+			height: 100%;
+		}
+		canvas {
+			position: absolute;
+			z-index:-1;
+			
+			
+		}
+		
+		
+
 body{
-  background-color:#4d4e5e;
+  background-color:#ffffff;
   color:#f2c54b;
   font-family:Verdana;
   font-variant:small-caps;
+  margin: 0px;
+  padding: 0px;
 }
 a{
   color:#dc5455;
 }
 
 /*  http://www.color-hex.com/color-palette/35645 */
+
+#top-view{
+	display:none;
+	
+	
+}
+#home-view{
+	display:none;
+	
+}
+
+.menu{
+	display:none;
+}
+
+#list-view{
+	height:70%;
+	
+}
+
+.gamestats{
+	
+	position:absolute;
+	width:100%;
+}
+#skoor{
+    float:right;
+	padding:15px;
+}
+
+#taimer{
+	float:left;
+	padding:15px;
+	
+}
