points get removed when wrong letter pressed, error animation

--- a/style.css
+++ b/style.css
@@ -39,3 +39,25 @@ h2 {
     80%{color: blue;}
     100%{color: orange;}
 }
+
+.error{
+    animation: error 0.8s forwards;
+    -webkit-animation: error 0.8s forwards;
+}
+
+@keyframes error{
+    0%{ background-color: red;}
+    20%{ background-color: white;}
+    40%{ background-color: red;}
+    60%{ background-color: white;}
+    80%{ background-color: red;}
+    100%{ background-color: white;}
+}
+@-webkit-keyframes error{
+    0%{ background-color: red;}
+    20%{ background-color: white;}
+    40%{ background-color: red;}
+    60%{ background-color: white;}
+    80%{ background-color: red;}
+    100%{ background-color: white;}
+}
