--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: 'Raleway', sans-serif !important;
+    background-color: #d8efe8;
 }
 
 canvas {
@@ -21,21 +22,54 @@ canvas {
     text-align: center;
 }
 #statistics{
-    display: none;
+    width: 500px;
+    float:left;
+}
+
+#toplist, #top{
+    float: left;
+}
+
+#wrapper{
+    width: 1000px;
+    overflow: hidden;
+}
+
+td, th{
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+
+table{
+    border-collapse: collapse;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+th {
+    background-color: #f2f2f2;
+    text-align: left;
+}
+
+h1{
+    font-family: Hazer;
+    font-size: 10em;
+    color: red;
+    text-shadow: 2px 2px 10px red;
 }
 
 h2 {
     font-family: helvetica;
+    font-size: 2em;
 }
 
-.rainbow {
-    -webkit-animation: rainbow 1s infinite;
+#play{
+    font-family: Hazer;
+    font-size: 4em;
+    color: #36388a;
 }
 
-@-webkit-keyframes rainbow{
-    20%{color: red;}
-    40%{color: yellow;}
-    60%{color: green;}
-    80%{color: blue;}
-    100%{color: orange;}
+@font-face{
+    font-family: Hazer;
+    src: local("alt_hazer"), url("alt_hazer.TTF") format("truetype");
 }
