Adjusted looks a bit, now loads new word right away when starting a new game.

--- a/style.css
+++ b/style.css
@@ -75,28 +75,28 @@ main {
     text-decoration: none;
     border: 2px solid rgba(0, 0, 0, 0);
 }
-.menu-link:hover,
-.menu-link:focus {
-    outline: none;
-}
-.menu-link:active {
-    color: rgb(146, 168, 209);
-}
-.menu-link.active-menu {
-    border: 2px solid rgb(146, 168, 209);
-}
-.pull-right {
-    float: right;
-}
+
 label {
     color: gray;
 }
-td {
+table {
+    width: 100%;
+    border-style: solid;
+}
+
+td, th {
     text-align: left;
+    border-style: solid;
+    padding: 3px;
+    padding-left: 10px;
+
 }
-th {
+.ct {
     text-align: center;
+    padding: 3px;
+    padding-left: 10px;
 }
+
 .letter {
     padding: 9px;
     text-transform: uppercase;
