--- a/style.css
+++ b/style.css
@@ -3,12 +3,17 @@
     padding: 0;
 }
 
-html, body, canvas{
+html, body{
     height: 100%;
     width: 100%;
     background-color: #333;
     color: #fff;
     user-select: none;
+}
+
+canvas{
+    height: 50%;
+    width: 50%;
 }
 
 .main{
