--- a/style.css
+++ b/style.css
@@ -157,3 +157,7 @@ make it thinner, then set it to again wrap around the entire parent element.
   stroke-dashoffset: 0;
   stroke: #06D6A0;
 }
+
+h1{
+  color: white;
+}
