--- a/gamestyle.css
+++ b/gamestyle.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Orbitron);
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +12,10 @@ canvas {
 }
 #back{
   position: fixed;
-  left:5%;
   bottom:10%;
+  font-family: Orbitron;
+
+}
+h1{
+  font-family: Orbitron;
 }
