--- a/style.css
+++ b/style.css
@@ -4,16 +4,14 @@
 }
 
 html, body{
-    height: 100%;
-    width: 100%;
     background-color: #333;
     color: #fff;
     user-select: none;
 }
 
 canvas{
-    height: 50%;
-    width: 50%;
+    height: 500px !important;
+    width: 100% !important;
 }
 
 .main{
