--- a/Style.css
+++ b/Style.css
@@ -2,6 +2,15 @@
     margin: 0;
     padding: 0;
 }
+
+.error{
+	background-color:red;
+}
+
+.errordark{
+	background-color:red;
+}
+
 html, body {
     width: 100%;
     height: 100%;
